#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.8.1 (devel) ==
 * Fixed issue #7: Error parsing interface function with contracts but no body.
 * Fixed limitation: Code Completion module list in import declarations now shows the module's DDoc.
 * Documentation: added entry in UserGuide#Eclipse_basics about Eclipse memory settings optimization.
 * Fixed/Implemented issue #10: Compiler installation search in preferences page.
 * Cleanup: Code Completion now shows no results if invoked after float token ending in a dot.
 * Implemented: Code Completion now resolves type properties (.init, .sizeof, .alignof, etc.), integral properties (.min, .max), float properties(.infinity, .nan, etc.).
 * Implemented: Code Completion now resolves parentheses expression. Auto declarations (resolve to initializer).

== DDT 0.8.0 (2013-08-30) ==
 * Updated DDT to latest version of DLTK (version 5.0, from Eclipse Kepler).
 * Changed: In DDoc view, the text of undefined macros now remains unmodified, instead of being replaced by empty text.
   * Example: _{{{My $(NO_SUCH_MACRO undefined) macro}}}_ will render as _{{{My $(NO_SUCH_MACRO undefined) macro}}}_ instead of _{{{My  macro}}}_.
 * Added: In DDoc view, added predefined DDoc macro: _{{{D}}}_. Works the same as _{{{D_CODE}}}_.
 * Implemented: Code Completion now presents language primitive results (void, int, char, etc.).
 * Fixed unintended behavior regression in 0.7.0 where Code Completion would not show any results when invoked in certain type reference source contexts. Examples (♦ denotes location where CC would be invoked):
{{{
foo[♦]♦
foo[123]♦
foo!♦(♦)
const(foo)♦
}}} 
 * Improved Code Completion to work when invoked next or inside a keyword. Previously it worked on primitive type keywords only ({{{int}}}, {{{char}}}, etc. ). Examples:   
   {{{
char intro, intro2; in♦ // CC invoked here will offer 【intro, intro2】 as completions