@@ -12,7 +12,7 @@ import dtool.ast.definitions.DefUnit;
 import dtool.ast.references.RefModule;
 import dtool.ast.statements.IStatement;
 import dtool.resolver.CommonDefUnitSearch;
-import dtool.resolver.INonScopedBlock;
+import dtool.resolver.INonScopedContainer;
 import dtool.util.ArrayView;
 
 /**
@@ -20,7 +20,7 @@ import dtool.util.ArrayView;
  * This is considered an INonScopedBlock because it might contain aliasing
  * imports and selective imports, which are primary-space {@link DefUnit}s.
  */
-public class DeclarationImport extends ASTNode implements INonScopedBlock, IDeclaration, IStatement {
+public class DeclarationImport extends ASTNode implements INonScopedContainer, IDeclaration, IStatement {
 	
 	public final ArrayView<IImportFragment> imports;
 	public final boolean isStatic;
