@@ -12,9 +12,9 @@ import dtool.ast.declarations.IDeclaration;
 import dtool.ast.definitions.DefinitionEnum.EnumBody;
 import dtool.ast.references.Reference;
 import dtool.ast.statements.IStatement;
-import dtool.resolver.INonScopedBlock;
+import dtool.resolver.INonScopedContainer;
 
-public class DeclarationEnum extends ASTNode implements INonScopedBlock, IDeclaration, IStatement {
+public class DeclarationEnum extends ASTNode implements INonScopedContainer, IDeclaration, IStatement {
 	
 	public final Reference type;
 	public final EnumBody body;
