@@ -9,9 +9,10 @@ import dtool.ast.ASTNode;
  * scope as the container. 
  * (version/debug declarations, attribute declarations, etc.)
  */
-public interface INonScopedBlock { // FIXME: some nodes implement this and they should not.
+public interface INonScopedContainer {
 	
-	/** @return an iterator for the members of this {@link INonScopedBlock}. Non-null. */
+	/** @return an iterator for the members of this {@link INonScopedContainer}. Non-null. 
+	 * Used mainly for resolving. */
 	Iterator<? extends ASTNode> getMembersIterator();
 	
 }
