@@ -12,24 +12,21 @@ int /*SYNTAX-ERROR*/;
 auto /*SYNTAX-ERROR*/;
 
 #REFSEARCH¤【
-Var
-VarAuto
-Var1
-
-VarAuto1
-】
-#comment(TODO)¤【
-Var2
-Var3
-VarAuto2
+Var▪
+Var1▪
+Var2▪
+Var3▪
+VarAuto▪
+VarAuto1▪
+VarAuto2▪
 】
 
 Var.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
 Var1.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
-VarAuto1.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
-
-Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂ TODO
 Var2.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
-VarAuto2.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
+VarAuto1.#REFSEARCH¤【#@INTEGRAL_PROPERTIES】;
+VarAuto2.#REFSEARCH¤【】;
+
 ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
 auto VarAuto = void;
+VarAuto.#REFSEARCH¤【】;
